<resources>
    <string name="app_name">Jujutsu Kaisen Wiki</string>
    <string name="character_name">Yuji Itadori</string>
    <string name="description">Yuji Itadori (虎いた杖どり悠ゆう仁じ Itadori Yūji?) adalah protagonis utama dalam seri Jujutsu Kaisen. Ia adalah anak dari Jin Itadori dan Kaori Itadori. Yuji adalah cucu dari Wasuke Itadori yang menjalani kehidupan normal hingga ia bertemu dengan Megumi dan memakan salah satu jari Sukuna. Setelah menjadi wadah Sukuna, Yuji mulai menghadiri Tokyo Jujutsu High bersama Megumi dan Nobara sebagai mahasiswa tahun pertama.</string>
    <string name="about">Tentang</string>
    <string name="title_about">Tentang Saya</string>
    <string name="gender">Laki-laki</string>
    <string name="tanggal_lahir">3 Februari 1990</string>
    <string name="ability_title">Kemampuan dan Kekuatan</string>
    <string name="ability_description">Tingkat Keahlian Keseluruhan : Suguru Geto adalah salah satu dari empat penyihir kelas khusus dan dianggap yang terburuk dari semua pengguna kutukan karena tingkat bahaya yang ia timbulkan bagi umat manusia. [18]\n\nSebagai seorang siswa, Suguru dan Satoru sama-sama dianggap \"yang terkuat\". [19] Suguru mampu melakukan pekerjaan singkat terhadap pengguna kutukan berpengalaman pada beberapa kesempatan dengan sedikit usaha. [20] Koleksi roh terkutuknya sangat banyak dengan beragam kemampuan dan peran berbeda dalam pertempuran. Suguru tidak terlalu bergantung pada kutukannya dan juga merupakan petarung jarak dekat yang berkemampuan tinggi. [21]</string>
    <string name="share">Bagikan</string>
    <string-array name="data_name">
        <item>Yuji Itadori</item>
        <item>Megumi Fushiguro</item>
        <item>Nobara Kugisaki</item>
        <item>Satoru Gojo</item>
        <item>Maki Zenin</item>
        <item>Toge inumaki</item>
        <item>Panda</item>
        <item>Yuta Okkotsu</item>
        <item>Sukuna</item>
        <item>Aoi</item>
        <item>Geto</item>
        <item>Nanami</item>
        
    </string-array>
    <string-array name="data_description">
        <item>Yuji Itadori (虎いた杖どり悠ゆう仁じ Itadori Yūji?) adalah protagonis utama dalam seri Jujutsu Kaisen. Ia adalah anak dari Jin Itadori dan Kaori Itadori. Yuji adalah cucu dari Wasuke Itadori yang menjalani kehidupan normal hingga ia bertemu dengan Megumi dan memakan salah satu jari Sukuna. Setelah menjadi wadah Sukuna, Yuji mulai menghadiri Tokyo Jujutsu High bersama Megumi dan Nobara sebagai mahasiswa tahun pertama.</item>

        <item>Megumi Fushiguro (伏ふし黒ぐろ恵めぐみ Fushiguro Megumi?) adalah deuteragonis dalam seri Jujutsu Kaisen. Dia adalah seorang penyihir jujutsu kelas 2 dan mahasiswa tahun pertama di Tokyo Jujutsu High bersama Yuji Itadori dan Nobara Kugisaki. Megumi adalah saudara tiri Tsumiki Fushiguro dan sebagai putra dari Toji Fushiguro, Megumi juga merupakan keturunan Keluarga Zenin. Megumi lahir di luar keluarga sebagai kartu truf Toji dan akhirnya ditemukan oleh Satoru Gojo, yang menjadi mentornya dan mendaftarkannya di Jujutsu High sebagai muridnya.</item>

        <item>Nobara Kugisaki (釘くぎ崎さき野の薔ば薇ら Kugisaki Nobara?) adalah tritagonis dalam seri Jujutsu Kaisen. Dia adalah seorang mahasiswa tahun pertama dan penyihir jujutsu kelas 3 di Tokyo Jujutsu High yang belajar di bawah bimbingan Satoru Gojo bersama dengan Yuji dan Megumi.</item>

        <item>Satoru Gojo (五ご条じょう悟さとる Gojō Satoru?) adalah salah satu protagonis utama dalam seri Jujutsu Kaisen. Dia adalah seorang penyihir jujutsu kelas istimewa dan dikenal luas sebagai yang terkuat di dunia. Satoru adalah kebanggaan Keluarga Gojo, orang pertama yang mewarisi baik Kemampuan Batas (Limitless) maupun Enam Mata (Six Eyes) dalam empat ratus tahun terakhir. Ia bekerja sebagai guru di Tokyo Jujutsu High dan menggunakan pengaruhnya untuk melindungi dan melatih sekutu muda yang kuat.</item>

        <item>Maki Zenin (禪ぜん院いん真ま希き Zen in Maki?) adalah karakter pendukung utama dalam Jujutsu Kaisen dan salah satu protagonis utama dalam prekuelnya, Jujutsu Kaisen 0: Jujutsu High. Saat ini, ia adalah mahasiswa tahun kedua di Tokyo Jujutsu High. Putri dari Ogi Zenin dan saudara kembarnya yang lebih tua dari Mai Zenin, Maki lahir di Keluarga Zenin. Lahir sebagai non-sorcerer di salah satu dari Tiga Keluarga Penyihir Besar, Maki seringkali diperlakukan dengan tidak adil dan merasa terdorong untuk keluar dari keluarga Zenin. Ia bercita-cita menjadi seorang penyihir jujutsu hebat untuk mengejek keluarganya, bekerja sama dengan teman-temannya Panda dan Toge Inumaki, sambil juga menjadi panutan bagi para mahasiswa tahun pertama.</item>

        <item>Toge Inumaki (狗いぬ巻まき棘とげ Inumaki Toge?) adalah karakter pendukung utama dalam Jujutsu Kaisen dan salah satu protagonis utama dalam prekuelnya, Jujutsu Kaisen 0: Jujutsu High. Ia adalah keturunan dari keluarga Inumaki dan telah mewarisi kutukan berbicara dari keluarga tersebut, yang telah mengembangkan pola bicara uniknya sendiri untuk menghindari mengutuk orang lain. Toge saat ini adalah penyihir jujutsu semi-kelas 1 dan mahasiswa tahun kedua di Tokyo Jujutsu High bersama dengan teman sekelasnya Yuta, Maki, dan Panda.</item>

        <item>Panda (パンダ Panda?) adalah karakter pendukung utama dalam Jujutsu Kaisen dan salah satu protagonis utama dalam prekuelnya, Jujutsu Kaisen 0: Jujutsu High. Panda bukanlah panda sungguhan, ia adalah Mayat Kutukan yang Berubah dengan Tiba-tiba yang diciptakan oleh Masamichi Yaga. Ia menghadiri Jujutsu High sebagai mahasiswa tahun kedua bersama dengan Maki, Toge, dan Yuta.</item>

        <item>Yuta Okkotsu (乙おっ骨こつ憂ゆう太た Okkotsu Yūta?) adalah karakter pendukung utama dalam seri Jujutsu Kaisen dan protagonis utama dalam seri prekuelnya, Jujutsu Kaisen 0: Jujutsu High. Awalnya, ia adalah manusia kutukan kelas istimewa yang dihantui oleh sahabat masa kecilnya yang sudah meninggal, Rika Orimoto. Satoru Gojo menjadi mentornya dan mendaftarkannya di Tokyo Jujutsu High.
            Yuta saat ini adalah mahasiswa tahun kedua di Jujutsu High dan bekerja sebagai penyihir jujutsu. Ia berlatih di luar negeri di Afrika bersama Miguel hingga setelah Insiden Shibuya ketika ia kembali ke Tokyo.</item>

        <item>Ryomen Sukuna (両りょう面めん宿すく儺な Ryōmen Sukuna?), lebih sering disebut sebagai Sukuna (宿すく儺な Sukuna?), adalah penyihir jujutsu terkuat dari seribu tahun yang lalu. Dianggap sebagai Raja Kutukan yang tak terbantahkan (呪のろいの王おう Noroi no Ō?), Sukuna adalah salah satu antagonis utama dalam seri Jujutsu Kaisen. Menurut legenda, Sukuna adalah Demon Khayalan (仮か想そうの鬼き神じん Kasō no Kijin?) selama Era Heian, tetapi sebenarnya dia adalah seorang penyihir yang juga dikenal sebagai Orang yang Tercela (堕だ天てん Daten?). Para penyihir jujutsu dari Zaman Emas Jujutsu berjuang habis-habisan melawannya tetapi akhirnya satu demi satu tumbang. Sukuna terus eksis melalui berbagai zaman dengan cara bertransformasi menjadi objek kutukan setelah kematiannya, di mana dia membagi kekuatannya menjadi dua puluh jari yang tak bisa hancur. Sukuna menjadi reinkarnasi pada bulan Juni 2018 ketika Yuji Itadori memakan salah satu jarinya. Sukuna terperangkap di dalam tubuh Yuji dan jarang mengendalikan tubuh tersebut sampai akhirnya ia berhasil mentransfer jiwanya ke tubuh Megumi Fushiguro.</item>

        <item>Aoi Todo (東とう堂どう葵あおい Tōdō Aoi?) adalah karakter pendukung dalam seri Jujutsu Kaisen. Dia adalah mahasiswa tahun ketiga di Sekolah Tinggi Jujutsu Kyoto dan seorang penyihir jujutsu kelas 1. Dia dibimbing oleh Yuki Tsukumo saat masih muda dan menganggap Yuji Itadori sebagai sahabat terbaiknya.</item>

        <item>Suguru Geto (夏げ油とう傑すぐる Getō Suguru?) adalah antagonis dalam seri Jujutsu Kaisen dan prekuelnya, Jujutsu Kaisen 0: Jujutsu High. Awalnya, dia adalah seorang mahasiswa dari Masamichi Yaga bersama Satoru Gojo dan Shoko Ieiri di Tokyo Jujutsu High. Pengalamannya sebagai penyihir jujutsu menumbuhkan kebencian mendalamnya terhadap non-penyihir, yang mengakibatkan insiden di mana Suguru membantai lebih dari seratus warga sipil dalam satu malam. Ia diusir dari Jujutsu High dan dikenal sebagai salah satu pengguna kutukan terburuk.</item>

        <item>Kento Nanami (七なな海み建けん人と Nanami Kento?) adalah karakter pendukung dalam Jujutsu Kaisen. Dia adalah mantan mahasiswa Tokyo Jujutsu High di mana dia merupakan adik kelas dari Satoru Gojo dan Suguru Geto. Nanami awalnya meninggalkan Jujutsu High setelah lulus untuk menjadi seorang pegawai kantoran, tetapi ia kembali empat tahun kemudian untuk melanjutkan pekerjaannya sebagai penyihir jujutsu. Ketika bekerja sebagai penyihir Jujutsu High, Nanami memiliki peringkat kelas 1 dan beroperasi terutama di kampus Tokyo. Dengan pengenalan Satoru, ia juga menjadi mentor dekat bagi Yuji Itadori.</item>


    </string-array>
    <string-array name="data_gender">
        <item>Laki-laki</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
        <item>Laki-laki</item>
        <item>Laki-laki</item>
        <item>Laki-laki</item>
        <item>Laki-laki</item>
        <item>Laki-laki</item>
        <item>Laki-laki</item>
        <item>Laki-laki</item>
    </string-array>
    <string-array name="data_birthday">
        <item>20 Maret 2003</item>
        <item>22 Desember 2002</item>
        <item>7 Agustus 2002</item>
        <item>7 Desember 1989</item>
        <item>20 Januari 2002</item>
        <item>23 Oktober 2001</item>
        <item>5 Maret 2003</item>
        <item>7 Maret 2001</item>
        <item>Tidak Diketahui</item>
        <item>23 September 2000</item>
        <item>3 Juli 1990</item>
        <item>3 Februari 1990</item>
    </string-array>
</resources>